<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DescriptionActivity"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="40dp"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/image_view_for_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/burger_for_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/discount_background"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/discount"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/image_view_for_menu"
        app:layout_constraintTop_toTopOf="@+id/image_view_for_menu" />

    <LinearLayout
        android:id="@+id/linear_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_for_menu">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burger_craze"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_for_menu" />

        <View
            android:id="@+id/view_green_point"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/green_point"
            app:layout_constraintBottom_toBottomOf="@id/text_view_title"
            app:layout_constraintStart_toEndOf="@+id/text_view_title"
            app:layout_constraintTop_toTopOf="@id/text_view_title" />

        <TextView
            android:id="@+id/text_view_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/open"
            android:textColor="@color/green"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view_green_point"
            app:layout_constraintStart_toEndOf="@+id/view_green_point"
            app:layout_constraintTop_toTopOf="@+id/view_green_point" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_title">

        <ImageView
            android:id="@+id/image_view_star"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_star" />

        <TextView
            android:id="@+id/text_view_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6.5dp"
            android:text="4.6" />

        <TextView
            android:id="@+id/text_view_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/participants"
            android:textColor="@color/grey_100" />

        <TextView
            android:id="@+id/text_view_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.5dp"
            android:text="@string/place"
            android:textColor="@color/grey_100" />

        <View
            android:id="@+id/view_grey_point"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/grey_point" />

        <TextView
            android:id="@+id/text_view_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/burger"
            android:textColor="@color/grey_100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_description">

        <TextView
            android:id="@+id/text_view_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_second"
            android:textColor="@color/grey_100"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/text_view_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free"
            android:textColor="@color/grey_100"
            android:textSize="12dp" />

        <View
            android:id="@+id/view_grey_point_delivery"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/grey_point" />

        <TextView
            android:id="@+id/text_view_minimum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum"
            android:textColor="@color/grey_100"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/grey_100"
            android:textSize="12dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_time"
        style="@style/Time.Button"
        android:layout_marginTop="14dp"
        android:text="15-20 min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_for_menu" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_time">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_direction" />

        <TextView
            android:id="@+id/text_view_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="1.5"
            android:textColor="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/grey" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>